--- a/CobrowseIO.DotNet.iOS.AppExtension.nuspec
+++ b/CobrowseIO.DotNet.iOS.AppExtension.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>CobrowseIO.DotNet.iOS.AppExtension</id>
-        <version>4.0.0-alpha04</version>
+        <version>4.0.1</version>
         <title>CobrowseIO.DotNet.iOS.AppExtension</title>
         <authors>Cobrowse.io</authors>
         <owners>Cobrowse.io</owners>
