chore(ci): install Xamarin via Homebrew

--- a/.github/workflows/build-pack-publish.yml
+++ b/.github/workflows/build-pack-publish.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Install Xamarin
+      run: brew install xamarin-android xamarin-ios
+
     - name: Run Cake build script
       run: |
         ./build.sh --nugetOrgApiKey="${{ secrets.NUGET_PUSH_TOKEN }}" --verbosity diagnostic
